--- a/tree.html
+++ b/tree.html
@@ -10,7 +10,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Will - Terapias manuais, integrativas e fisioterapia</title>
+    <title>Dr. Will - Terapias manuais, integrativas e pilates</title>
     <meta name="description" content="List all your links on one website.">
     <meta property="og:title" content="links-website" />
     <meta property="og:description" content="List all your links on one website." />
@@ -28,7 +28,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       </div>
       <div class="header_text flex_column_center">
         <h1 class="header_h_item">William Souto</h1>
-        <h2 class="header_h_item">Terapias manuais, integrativas e fisioterapia</h2>
+        <h2 class="header_h_item">Terapias manuais, integrativas e pilates/fisioterapia</h2>
       </div>
     <!-- Logo, Title and Description Codes End -->  
 
@@ -140,7 +140,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           </a>
         </div>
         <!-- Menu Item -->
-        <a class="main_a_item" href="https://drwill.com.br/" target="_blank" rel="nofollow">
+        <a class="main_a_item" href="/" target="_blank" rel="nofollow">
           <button class="main_button_item">Site</button>
         </a>
         <a class="main_a_item" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o!" target="_blank" rel="nofollow">
@@ -157,16 +157,16 @@ https://github.com/ardacarofficial/links-website is open source project.
         <div class="header_svg_list flex_row_center qrcodes">
         <div class="header_svg_item">
           <a href="#link" target="_blank" rel="nofollow">
-            <img src="img/QRcontato.png" /> <p>Contato</p>
+            <img src="files/Contato%20Dr%20Will.vcf" /> <p>Contato</p>
           </a>
         </div>
         <div class="header_svg_item">
-          <a href="#link" target="_blank" rel="nofollow">
+          <a href="/" target="_blank" rel="nofollow">
             <img src="img/QRsite.png" /><p>Site</p>
           </a>
         </div>
         <div class="header_svg_item">
-          <a href="#link" target="_blank" rel="nofollow">
+          <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es" target="_blank" rel="nofollow">
             <img src="img/QRwhats.png" /><p>WhatsApp</p>
           </a>
         </div>
