--- a/tree.html
+++ b/tree.html
@@ -156,8 +156,8 @@ https://github.com/ardacarofficial/links-website is open source project.
       </section>
         <div class="header_svg_list flex_row_center qrcodes">
         <div class="header_svg_item">
-          <a href="#link" target="_blank" rel="nofollow">
-            <img src="files/Contato%20Dr%20Will.vcf" /> <p>Contato</p>
+          <a href="files/Contato%20Dr%20Will.vcf" download>
+            <img src="img/QRcontato.png" /> <p>Cartão de contato</p>
           </a>
         </div>
         <div class="header_svg_item">
