--- a/tree.html
+++ b/tree.html
@@ -156,7 +156,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       </section>
         <div class="header_svg_list flex_row_center qrcodes">
         <div class="header_svg_item">
-          <a href="files/Contato%20Dr%20Will.vcf" download>
+          <a href="https://drwill.com.br/files/Contato%20Dr%20Will.vcf" rel="nofollow" target="_top">
             <img src="img/QRcontato.png" /> <p>Cartão de contato</p>
           </a>
         </div>
