--- a/tree.html
+++ b/tree.html
@@ -119,7 +119,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Tratamento com seriedade, individualidade e dedicação para o seu bem-estar. <br>Liberação miofascial, Rolf, drenagem linfática, massagem sueca, relaxante, ventosas e auriculoterapia.</p>
+          <p>Tratamento com seriedade, individualidade e dedicação para o seu bem-estar. <br>Liberação miofascial, Rolf, drenagem linfática, massagem sueca, relaxante, ventosas, auriculoterapia e Pilates.</p>
         </div>
         <!-- Menu Small Item 
         <div class="main_small_button_list">
