--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                     <a href="index.html" class="navbar-brand">
                         <h1 class="mb-3 text-white"><span class="text-primary">Dr. </span> Will</h1>
                     </a>
-                    <p>Tratamento baseado em evidências com seriedade e dedicação para o seu bem-estar. <br>Experimente nossas terapias e descubra os benefícios comprovados para relaxamento e saúde.</p>
+                    <p>Tratamento com seriedade, individualidade e dedicação para o seu bem-estar. <br>Experimente nossas terapias e descubra os benefícios para relaxamento e saúde.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Santo André, SP</p>
                     <p><i class="fa fa-phone-alt mr-2"></i>011 974237159</p>
                     <p><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</p>
