--- a/tree.html
+++ b/tree.html
@@ -27,8 +27,8 @@ https://github.com/ardacarofficial/links-website is open source project.
         <img src="img/foto.jpg" alt="Logo" />
       </div>
       <div class="header_text flex_column_center">
-        <h1 class="header_h_item">William Souto</h1>
-        <h2 class="header_h_item">Terapias manuais, Integrativas e Pilates</h2>
+        <h1 class="header_h_item">William Otavio Souto</h1>
+        <h2 class="header_h_item">Terapias Manuais, Integrativas e Pilates</h2>
       </div>
     <!-- Logo, Title and Description Codes End -->  
 
