--- a/index.html
+++ b/index.html
@@ -279,6 +279,64 @@
                 </div>
             </div>
         </div>
+        <div class="row mx-0 justify-content-center text-center">
+            <div class="col-lg-6">
+                <h1>Espaço Hayanna</h1>
+                <img src="img/hayanna.jpg" style=" max-height: 150px; ">
+            </div>
+        </div>
+        <div class="owl-carousel service-carousel">
+            <div class="service-item position-relative">
+                <img class="img-fluid" src="img/pistola.jpg" alt="">
+                <div class="service-text text-center">
+                    <h4 class="text-white font-weight-medium px-3">Pistola de massagem</h4>
+                    <p class="text-white px-3 mb-3">Alívio muscular, redução de tensão, melhora da circulação sanguínea, recuperação mais rápida e relaxamento profundo com a pistola de massagem.</p>
+                    <div class="w-100 bg-white text-center p-4" >
+                        <a class="btn btn-primary" href="">Agendar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="service-item position-relative">
+                <img class="img-fluid" src="img/ventosa.png" alt="">
+                <div class="service-text text-center">
+                    <h4 class="text-white font-weight-medium px-3">Ventosas</h4>
+                    <p class="text-white px-3 mb-3">Melhora da circulação, alívio de dores musculares, redução da inflamação, relaxamento profundo e promoção da saúde geral com as ventosas.</p>
+                    <div class="w-100 bg-white text-center p-4" >
+                        <a class="btn btn-primary" href="">Agendar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="service-item position-relative">
+                <img class="img-fluid" src="img/bota.jpg" alt="">
+                <div class="service-text text-center">
+                    <h4 class="text-white font-weight-medium px-3">Bota Pneumática</h4>
+                    <p class="text-white px-3 mb-3">Recuperação acelerada, redução do inchaço, melhora da circulação e alívio da dor com o uso da bota pneumática.</p>
+                    <div class="w-100 bg-white text-center p-4" >
+                        <a class="btn btn-primary" href="">Agendar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="service-item position-relative">
+                <img class="img-fluid" src="img/service-3.jpg" alt="">
+                <div class="service-text text-center">
+                    <h4 class="text-white font-weight-medium px-3">Ambiente climatizado</h4>
+                    <p class="text-white px-3 mb-3">Conforto máximo durante o tratamento, relaxamento agradável, regulação da temperatura ideal e ambiente climatizado para uma experiência de terapia inigualável.</p>
+                    <div class="w-100 bg-white text-center p-4" >
+                        <a class="btn btn-primary" href="">Agendar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="service-item position-relative">
+                <img class="img-fluid" src="img/tens.jpg" alt="">
+                <div class="service-text text-center">
+                    <h4 class="text-white font-weight-medium px-3">TENS</h4>
+                    <p class="text-white px-3 mb-3">Alívio da dor, relaxamento muscular, redução de tensões, promoção da circulação sanguínea e alívio do estresse com a terapia de Estimulação Nervosa Elétrica Transcutânea (TENS)</p>
+                    <div class="w-100 bg-white text-center p-4" >
+                        <a class="btn btn-primary" href="">Agendar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- <div class="row justify-content-center bg-appointment mx-0">
             <div class="col-lg-6 py-5">
                 <div class="p-5 my-5" style="background: rgba(33, 30, 28, 0.7);">
