--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+11 974237159</small>
+                    <small><i class="fa fa-phone-alt mr-2"></i>11 974237159</small>
                     <small class="px-3">|</small>
                     <small><i class="fa fa-envelope mr-2"></i>contato@drwill.com.br</small>
                 </div>
@@ -79,17 +79,17 @@
                 <div class="navbar-nav m-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">Sobre</a>
-                    <a href="service.html" class="nav-item nav-link">Serviços</a>
+                    <a href="service.html" class="nav-item nav-link">Terapias</a>
                     <a href="price.html" class="nav-item nav-link">Preços</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                    <!--<div class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Artigos e notícias</a>
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="appointment.html" class="dropdown-item">Appointment</a>
                             <a href="opening.html" class="dropdown-item">Open Hours</a>
                             <a href="team.html" class="dropdown-item">Our Team</a>
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
-                    </div>
+                    </div>-->
                     <a href="contact.html" class="nav-item nav-link">Contato</a>
                 </div>
                 <a href="" class="btn btn-primary d-none d-lg-block">Agendar</a>
@@ -475,7 +475,7 @@
      Open Hours End -->
 
 
-    <!-- Pricing Start -->
+    <!-- Pricing Start 
     <div class="container-fluid bg-pricing" style="margin: 0;">
         <div class="container">
             <div class="row">
@@ -557,7 +557,7 @@
                         <img class="img-fluid" src="img/foto.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <p class="m-0">Terapeuta manual & <br>graduando em fisioterapia</p>
+                                <p class="m-0">Terapeuta manual, integrativo, instrutor de pilates &<br>graduando em fisioterapia</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <a class="btn btn-outline-primary btn-square mr-2" href="https://twitter.com/drwillsouto"><i class="fab fa-twitter"></i></a>
@@ -659,14 +659,15 @@
                             </div>
                         </div>
                         <div class="col-sm-6 mb-5">
-                            <h5 class="text-white text-uppercase mb-4">Our Services</h5>
+                            <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito Rolf)</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Deep Tissue)</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Avançada/Deep Tissue)</a>
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
                                 <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
                             </div>
                         </div>
                         <!--<div class="col-sm-12 mb-5">
