--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="img/browser.png">
+    <link rel="icon" href="img/f2.png">
     <meta charset="utf-8">
     <title>Will - Terapias manuais, integrativas e pilates</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -70,7 +70,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 text-primary">Will</h1>
+                <img alt="" src="img/f2.png" class="img-fluid w-100">
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
