--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@
                     <div class="col-lg-6">
 
                     </div>
-                    <div class="col-lg-6 pt-5 pb-lg-5">
-                        <div class="hours-text bg-light p-4 p-lg-5 my-lg-5">
+                    <div class="col-lg-6 pt-5">
+                        <div class="hours-text bg-light p-4 p-lg-5">
                             <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Horário de funcionamento</h6>
                             <h1 class="mb-4">Venha relaxar e aliviar dores</h1>
                             <p>Estamos abertos para atendê-lo com cuidado e dedicação, de:</p>
