--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <img alt="" src="img/f2.png" class="img-fluid w-100">
+                <img alt="" src="img/f2.png" class="img-fluid w-100 logo">
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -632,7 +632,7 @@
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 mb-5">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="mb-3 text-white">Will</h1>
+                        <img alt="" src="img/f2.png" class="img-fluid w-100 lfooter mb-3">
                     </a>
                     <p>Tratamento com seriedade, individualidade e dedicação para o seu bem-estar. <br>Experimente nossas terapias e descubra os benefícios para relaxamento e saúde.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Santo André, SP</p>
