--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="img/f2.png">
+    <link rel="icon" href="img/favicon.png">
     <meta charset="utf-8">
     <title>Will - Terapias manuais, integrativas e pilates</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -70,7 +70,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <img alt="" src="img/f2.png" class="img-fluid w-100 logo">
+                <img alt="" src="img/f2.png" class="logo">
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -632,7 +632,7 @@
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 mb-5">
                     <a href="index.html" class="navbar-brand">
-                        <img alt="" src="img/f2.png" class="img-fluid w-100 lfooter mb-3">
+                        <img alt="" src="img/ff1.png" class="img-fluid w-100 lfooter mb-3">
                     </a>
                     <p>Tratamento com seriedade, individualidade e dedicação para o seu bem-estar. <br>Experimente nossas terapias e descubra os benefícios para relaxamento e saúde.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>Santo André, SP</p>
