--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
             <div class="row">
                 <div class="col-lg-6" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <iframe class="position-absolute w-100 h-100" src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBwZ1VEc1qJbXVZrrOlVYsHL_n7hXgEUlQ&&center=-23.650005352416386,-46.54071543258954&zoom=18&maptype=satellite" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        <iframe src="https://www.google.com/maps/d/embed?mid=1CGwZi_5obvRmPQvQRGQHUrIibkCIMR8&hl=pt-BR&ehbc=2E312F" width="640" height="480"></iframe>
                     </div>
                 </div>
                 <div class="col-lg-6 pt-5 pb-lg-5">
