--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
             <div class="row">
                 <div class="col-lg-6" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <iframe src="https://www.google.com/maps/d/embed?mid=1CGwZi_5obvRmPQvQRGQHUrIibkCIMR8&hl=pt-BR&ehbc=2E312F" width="640" height="480"></iframe>
+                        <iframe src="https://www.google.com/maps/d/embed?mid=1CGwZi_5obvRmPQvQRGQHUrIibkCIMR8&hl=pt-BR&ehbc=2E312F" style="max-width: 640px;width: 100%;" height="480"></iframe>
                     </div>
                 </div>
                 <div class="col-lg-6 pt-5 pb-lg-5">
