--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
             </button>
             <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
                 <div class="navbar-nav m-auto py-0">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">Sobre</a>
-                    <a href="service.html" class="nav-item nav-link">Terapias</a>
-                    <a href="price.html" class="nav-item nav-link">Preços</a>
+                    <a href="/" class="nav-item nav-link active">Home</a>
+                    <a href="sobre" class="nav-item nav-link">Sobre</a>
+                    <a href="servicos" class="nav-item nav-link">Serviços</a>
+                    <a href="preco" class="nav-item nav-link">Preços</a>
                     <!--<div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Artigos e notícias</a>
                         <div class="dropdown-menu rounded-0 m-0">
@@ -90,7 +90,7 @@
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         </div>
                     </div>-->
-                    <a href="contact.html" class="nav-item nav-link">Contato</a>
+                    <a href="contato.html" class="nav-item nav-link">Contato</a>
                 </div>
                 <a href="" class="btn btn-primary d-none d-lg-block">Agendar</a>
             </div>
@@ -349,6 +349,7 @@
             </div>
             
         </div>
+    </div>
         <!-- <div class="row justify-content-center bg-appointment mx-0">
             <div class="col-lg-6 py-5">
                 <div class="p-5 my-5" style="background: rgba(33, 30, 28, 0.7);">
@@ -650,23 +651,23 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Quick Links</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Sobre</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Nossos serviços</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Preços</a>
-                                <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contato</a>
+                                <a class="text-white-50 mb-2" href="/"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                                <a class="text-white-50 mb-2" href="sobre"><i class="fa fa-angle-right mr-2"></i>Sobre</a>
+                                <a class="text-white-50 mb-2" href="servicos"><i class="fa fa-angle-right mr-2"></i>Serviços</a>
+                                <a class="text-white-50 mb-2" href="precos"><i class="fa fa-angle-right mr-2"></i>Preços</a>
+                                <a class="text-white-50" href="contato"><i class="fa fa-angle-right mr-2"></i>Contato</a>
                             </div>
                         </div>
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito Rolf)</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Avançada/Deep Tissue)</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
+                                <a class="text-white-50 mb-2" href="servicos#rolf"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Conceito Rolf)</a>
+                                <a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial (Avançada/Deep Tissue)</a>
+                                <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
+                                <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
+                                <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
+                                <a class="text-white-50 mb-2" href="servicos#vent"><i class="fa fa-angle-right mr-2"></i>Ventosaterapia</a>
+                                <a class="text-white-50 mb-2" href="servicos#pq"><i class="fa fa-angle-right mr-2"></i>Pedras quentes</a>
                             </div>
                         </div>
                         <!--<div class="col-sm-12 mb-5">
