--- a/shell.html
+++ b/shell.html
@@ -67,7 +67,7 @@
 
 
     <!-- Navbar Start -->
-    <div class="container-fluid p-0">
+    <div class="container-fluid p-0 navbarcontainer">
         <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
                 <img alt="" src="img/f2.png" class="logo">
