--- a/contato.html
+++ b/contato.html
@@ -26,6 +26,8 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+     <link rel="stylesheet" href="css/linktreereset.css">
+    <link rel="stylesheet" href="css/linktreestyle.css">
 </head>
 
 <body>
