--- a/tree.html
+++ b/tree.html
@@ -19,6 +19,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400&amp;display=swap">
     <link rel="stylesheet" href="css/linktreereset.css">
     <link rel="stylesheet" href="css/linktreestyle.css">
+      <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header>
