--- a/tree.html
+++ b/tree.html
@@ -20,6 +20,7 @@ https://github.com/ardacarofficial/links-website is open source project.
     <link rel="stylesheet" href="css/linktreereset.css">
     <link rel="stylesheet" href="css/linktreestyle.css">
       <link href="css/style.css" rel="stylesheet">
+      <link rel="icon" href="img/favicon.png">
   </head>
   <body>
     <header>
