--- a/tree.html
+++ b/tree.html
@@ -25,7 +25,7 @@ https://github.com/ardacarofficial/links-website is open source project.
   <body>
     <header>
     <!-- Logo, Title and Description Codes Start -->
-      <div class="header_img flex_column_center">
+      <div class="header_img flex_column_center pb-3">
         <img src="img/foto.jpg" alt="Logo" />
       </div>
       <div class="header_text flex_column_center">
@@ -175,8 +175,8 @@ https://github.com/ardacarofficial/links-website is open source project.
         </div>
         
          <!-- Contact Start -->
-    <div class="container-fluid py-5 contatocont">
-        <div class="container py-5">
+    <div class="container-fluid  contatocont">
+        <div class="container pb-5">
             <div class="row">
                 <div class="col-lg-6 mt-5">
                   
